src/neahtta/static/css/base.css
/* ... */
ul.meanings {
    list-style-type: circle;
}

/* NOTE: make smaller */
dl.possible_analyses dt {
    font-weight: lighter; 
    font-style: italic;
    font-weight: 400;
}
dl.possible_analyses.grid_analyses {
    margin-top: 0;
}
dl.possible_analyses dd {
    margin-left: 0;
    padding-left: 0;
}
ul.possible_forms {
    list-style-type: none; 
    margin-left: 0em;
}

ul.possible_forms li {
    margin-left: .5em;
    font-size: 80%;
    font-style: normal;
    font-weight: 400;
}
/* A little more color */
a.brand {
    color: #800 !important;
}


.main-nav > .nav > li > a {
    color: #3A3;
    font-weight: light;
}

ul + .nav-header.variantnote {
    margin-top: -1.25em;
}

.subnavcoloring .active a, .subnavcoloring li:hover a {
    background-color: #DDD !important;
    color: #333 !important;
    opacity: .9 !important;
}

.subnavcoloring a, .subnavcoloring li a {
    background-color: #FFF !important;
    color: #333 !important;
    opacity: .9 !important;
}

#reader_screenshot {
    border: 1px solid #BBB;
    box-shadow: 3px 3px 3px #DDD;
}

.examples {
	margin-left: -1.4em;
	margin-top: .75em;
}

.examples dd {
	margin-bottom: .75em;
	margin-top: .25em;
}

div.button-padding {
	width: 100%;
	padding: 5px 5px 10px;
}

.examples dl {
	margin-top: 0;}

.examples dt {
	font-weight: 400;
}

.examples dd {
	font-weight: 300;
	margin-left: 0;
	font-style: italic;
}

ul.unknown_lexemes {
	list-style: circle;
}

#bookmarklet a {
    color: #FFF;
    font-size: 130%; 
    text-shadow: none;
    font-weight: 300;
}

#bookmarklet {
    text-shadow: none;
    padding: 4px 4px;
    margin-left: 1em;

    background-color: rgba(85, 153, 85, .9);
    border: 1px solid #595;
    box-shadow: 1px 1px 2px #CCC;
}

.lemma_action {
    font-size: 85%;
    margin-left: 4em;
}

.lemma_action.detail {
    font-size: 100%;
    margin-left: 4em;
}


/* Footer
-------------------------------------------------- */

footer {
    background-color: #BBB;
    border-top: 1px solid #888;
    height: 180px;

    padding-top: 15px;
    padding-bottom: 25px;
    
    position: relative;
    margin-top: -180px;
    clear: both; 
}

.footer {
  text-align: center;
  padding: 30px 0;
  margin-top: 70px;
}
.footer p {
  margin-bottom: 0;
}
.footer-links {
  margin: 10px 0;
}
.footer-links li {
  display: inline;
  padding: 0 2px;
}
.footer-links li:first-child {
  padding-left: 0;
}

.analysis_grid {
    position: relative;
}

.grid_analyses dt, .grid_analyses ul, .grid_analyses li {
    margin-left: 0 !important;
}

.grid_analyses dt {
    font-size: 90%;
    font-weight: 500;
}

.valign_block {
    position: relative;
}

.intro-note {
    max-width: 300px;
    background-color: #EFEFEF;
    border-color: #DEDEDE;
    color: #555;
}

p.analysis_note {
    font-size:  90%;
    line-height: 1.3em;
    color: #444;
    display: block;
    position: absolute;
    bottom: 0px;
    margin-bottom: 0px;
}

img.i18n_flag {
  width: 20px;
  border: 1px solid #BBB;
  background-color: #BBB;
}

div.default_flag {
    width: 20px;
    /* border: 1px solid #888; */
    box-shadow: 1px 1px 2px #CCC;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    height: 15px;
    display: inline-block;
    overflow: hidden;
    text-shadow: none;
    font-family: sans-serif;
    line-height: 15px;
    /* color: #777; */
    text-align: center;
    vertical-align: middle;

    background-color: #595;
    border: 1px solid #595;
    color: #FFF;
    font-weight: 100;
    font-size: 8pt;
}

.other_link {
    font-style: italic;
    margin-left: 1em;
}

.see_also, .see_also a {
    font-size: 90%;
    font-style: italic; 
}

.transparent_text {
    color: transparent;
}

#language_grouped_nav {
    margin-bottom: 2em;
    margin-left: .75em;
}

#language_grouped_nav ul.nav-tabs:last-child {
    margin-bottom: .25em;
}

#language_grouped_nav h5 {
    font-size: 120%;
    font-variant: small-caps;
    text-transform: lowercase;
    color: #999;
}

#language_grouped_nav div.active-group {
}

#language_grouped_nav h5.active-group-title .inactive-placeholder {
    display: none;
}

#language_grouped_nav .inactive-placeholder {
    position: relative;
    left: -.5em;
    margin-left: -1.25em;
}

#language_grouped_nav h5.inactive-group-title a {
    color: #777;
}

#language_grouped_nav h5.active-group-title a {
    color: #666;
}

#language_grouped_nav div.active .block-header {
    padding: 0px 3px;
}

#language_grouped_nav div.active .block-header a {
    color: #666;
    font-weight: bold;
}

.active .transparent_text {
    color: #666;
}

#language_grouped_nav .variant-select-menu .nav-header {
    padding: 3px 3px;
}

#language_grouped_nav div.active.language-item {
    background-color: #F7F7F7;
    border: 1px solid #CCC;
    border-radius: 3px;
}

#language_grouped_nav .inactive-group {
    display: none; 
}

span.entry_source {
    display: block;
    width: 100%;
    text-align: right;
    font-style: italic;
    font-size: 90%;
    margin-top: .25em;
}

/*
 *
 * Key palette / keyboard
 *
 */

#keyboard {
    /* display: none; */
    background-color: #000;
}

/* mobile positioning */
@media (max-width: 550px) {
    #keyboard {
        position: fixed;
        bottom: 0px;
        left: 0px;
        width: 100%;
        height: 40px;
    }

}

/* tablet positioning */
@media (min-width: 550px) and (max-width: 800px) {
    #keyboard {
        position: fixed;
        bottom: 0px;
        left: 0px;
        width: 100%;
        height: 40px;
    }
}

/* TODO: different design for desktop, closer to input, maybe use bootstrap
 * tooltip buttons  
 */

.fixfixed {
    position: absolute;
}

.keyboard {
    bottom: 0px;
    position: absolute;
}

/* TODO: center */
#keyboard ul {
    list-style-type: none;
    margin: 0 auto;
    display: table-row;
}

#keyboard ul li {
	display: block;
    float: left;
    background-color: #222;
    display: table-cell;
}
/* ... */

